cmake_minimum_required(VERSION 3.9)

set(PluginsCode ../../PluginCode)

add_subdirectory(StringImporter)
add_subdirectory(TextureTool)
add_subdirectory(SoundTool)
add_subdirectory(ResourcePacker)
add_subdirectory(MovieTool)
add_subdirectory(WorldEditor)
add_subdirectory(OpenGexImporter)
add_subdirectory(FontImporter)
add_subdirectory(ColladaImporter)
